feature: add search in documents
