# search/documentation/openapi.yaml
@@ -27,17 +27,17 @@ paths:
           in: query
         - required: false
           schema:
-            title: Sentence
+            title: method of query
             type: string
-          example: some sentence
-          name: sentence
+          example: semantic
+          name: method
           in: query
         - required: false
           schema:
-            title: Question
+            title: Scope of query
             type: string
-          example: some question
-          name: question
+          example: annotation
+          name: scope
           in: query
         - required: false
           schema:
@@ -263,6 +263,10 @@ components:
           title: Total Objects
           minimum: 0
           type: integer
+        short_answer:
+          title: Short Answer On Question
+          minimum: 0
+          type: string
         text_pieces:
           title: Text Pieces
           type: array
